--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Preentrega2 | Alan Maldonado</title>
     
 </head>
-<body style="background-color: cornflowerblue;">
+<body style="background-color:grey;">
     
     <script src="./js/index.js"></script>
 </body>
